--- a/dockerfile-kasm-core-kasmos
+++ b/dockerfile-kasm-core-kasmos
@@ -110,36 +110,30 @@ LABEL "com.kasmweb.gpu_acceleration_egl"="nvidia"
 
 ### Environment config
 ARG DISTRO=debian
-ARG LANG='en_US.UTF-8'
-ARG LANGUAGE='en_US:en'
-ARG LC_ALL='en_US.UTF-8'
-ARG START_PULSEAUDIO=1
-ARG START_DE=kde5
-ARG TZ='Etc/UTC'
-ENV AUDIO_PORT=4901 \
-    DEBIAN_FRONTEND=noninteractive \
+ARG LANG='zh_CN.UTF-8'
+ARG LANGUAGE='zh_CN:cn'
+ARG LC_ALL='zh_CN.UTF-8'
+ARG TZ='Asia/Shanghai'
+ENV DEBIAN_FRONTEND=noninteractive \
     DISPLAY=:1 \
     DISTRO=$DISTRO \
     GOMP_SPINCOUNT=0 \
     HOME=/home/kasm-user \
     INST_SCRIPTS=/dockerstartup/install \
-    KASMVNC_AUTO_RECOVER=true \
     KASM_VNC_PATH=/usr/share/kasmvnc \
     LANG=$LANG \
     LANGUAGE=$LANGUAGE \
     LC_ALL=$LC_ALL \
     LD_LIBRARY_PATH=/opt/libjpeg-turbo/lib64/:/usr/local/lib/ \
-    LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu:/usr/lib/i386-linux-gnu${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}:/usr/local/nvidia/lib:/usr/local/nvidia/lib64 \
+    LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu:/usr/lib/i386-linux-gnu${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}:\
     MAX_FRAME_RATE=24 \
     NO_VNC_PORT=6901 \
     NVIDIA_DRIVER_CAPABILITIES=${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}graphics,compat32,utility \
     OMP_WAIT_POLICY=PASSIVE \
-    PULSE_RUNTIME_PATH=/var/run/pulse \
     SDL_GAMECONTROLLERCONFIG="030000005e040000be02000014010000,XInput Controller,platform:Linux,a:b0,b:b1,x:b2,y:b3,back:b8,guide:b16,start:b9,leftstick:b10,rightstick:b11,leftshoulder:b4,rightshoulder:b5,dpup:b12,dpdown:b13,dpleft:b14,dpright:b15,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,righttrigger:b7" \
     SHELL=/bin/bash \
-    START_PULSEAUDIO=$START_PULSEAUDIO \
     STARTUPDIR=/dockerstartup \
-    START_DE=$START_DE \
+
     TERM=xterm \
     VNC_COL_DEPTH=24 \
     VNCOPTIONS="-PreferBandwidth -DynamicQualityMin=4 -DynamicQualityMax=7 -DLP_ClipDelay=0" \
@@ -148,12 +142,11 @@ ENV AUDIO_PORT=4901 \
     VNC_PW=vncpassword \
     VNC_RESOLUTION=1280x1024 \
     VNC_RESOLUTION=1280x720 \
-    VNC_VIEW_ONLY_PW=vncviewonlypassword \
+
     TZ=$TZ
 
 ### Ports and user
-EXPOSE 3000 \
-       2000 \
+EXPOSE 5901  6080 6901
 WORKDIR $HOME
 USER 1000
 
